# matterbot

./: .gitignore  README.md
Matterbot/: CMakeLists.txt  Matterbot.sln
Matterbot/Matterbot/: .gitignore  CMakeLists.txt  ICommand.h  Matterbot.cpp  Matterbot.h  Matterbot.vcxproj  Matterbot.vcxproj.filters  MattermostBot.cpp  MattermostBot.h  MattermostWebhooks.cpp  MattermostWebhooks.h  Message.cpp  Message.h  StdLogger.cpp  StdLogger.h  WebResponse.cpp  WebResponse.h  main.cpp  packages.config
Matterbot/MatterbotSample/: .gitignore  CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  EchoCommand.h  FileBackedLogger.cpp  FileBackedLogger.h  MatterbotSample.vcxproj  MatterbotSample.vcxproj.filters  ReverseCommand.h  main.cpp
